# autoconf-template

./: COPYING  LICENSE  Makefile.am  autogen.sh  configure.ac
src/: Makefile.am  main.cc
